--- a/setup/playbook/changehostname.yml
+++ b/setup/playbook/changehostname.yml
@@ -7,6 +7,6 @@
     ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Change hostname
-      shell: "sed -e 's/ip-10-0-0-9/postgis/g' -e 's/ip-10-0-0-5/spark-worker1/g' -e 's/ip-10-0-0-14/spark-master/g' -i /etc/hostname"
+      shell: "sed -e 's/ip-10-0-0-9/postgis/g' -e 's/ip-10-0-0-7/spark-worker1/g' -e 's/ip-10-0-0-8/spark-master/g' -e 's/ip-10-0-0-13/spark-worker2/g' -e 's/ip-10-0-0-10/spark-worker3/g' -i /etc/hostname"
     - name: Reboot
       shell: "/sbin/reboot"
