--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -30,20 +30,23 @@ http {
     include /etc/nginx/conf.d/*.conf;
     server {
         listen 80;
-        server_name smartrider.dtrace.net;
+        server_name dtrace.net *.dtrace.net;
         location / {
-            return 301 https://$host$request_uri;
-        }    
-    }
-    server {
-        listen 443 ssl;
-        server_name smartrider.dtrace.net;
-        ssl_certificate /etc/nginx/fullchain.cer;
-        ssl_certificate_key /etc/nginx/dtrace.net.key;
-        
-        location / {
-            proxy_pass http://10.0.0.9:8080;
+            proxy_pass http://smartrider:8080;
             proxy_redirect default;
+            #No redirection needed since we are using CF SSL service
+            #return 301 https://$host$request_uri;
         }
     }
+#    server {
+#        listen 443 ssl;
+#        server_name smartrider.dtrace.net;
+#        ssl_certificate /etc/nginx/fullchain.cer;
+#        ssl_certificate_key /etc/nginx/dtrace.net.key;
+#
+#        location / {
+#            proxy_pass http://smartrider:8080;
+#            proxy_redirect default;
+#        }
+#    }
 }
