--- a/app/nginx/docker-compose.yml
+++ b/app/nginx/docker-compose.yml
@@ -1,14 +1,31 @@
 version: '2.1'
+networks:
+  smartridernet:
+    driver: bridge
 services:
+  smartrider:
+    hostname: smartrider
+    domainname: dtrace.net
+    image: smartrider
+    environment:
+      - PGPWD=PASSWORD
+      - PGUSER=USER
+      - PGDB=DB
+      - PGHOST=HOST
+    networks:
+      smartridernet:
+    restart: always
   nginx-proxy:
     hostname: nginx
     domainname: dtrace.net
     image: nginx:alpine
     volumes:
-      - ./cert/fullchain.cer:/etc/nginx/fullchain.cer
-      - ./cert/dtrace.net.key:/etc/nginx/dtrace.net.key
+      #- ./cert/fullchain.cer:/etc/nginx/fullchain.cer
+      #- ./cert/dtrace.net.key:/etc/nginx/dtrace.net.key
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
       - '80:80'
-      - '443:443'
+      #- '443:443'
+    networks:
+      smartridernet:
     restart: always
